--- a/LAB19/WON5_tema19_2/WON5_tema19_2.css
+++ b/LAB19/WON5_tema19_2/WON5_tema19_2.css
@@ -1,51 +1,49 @@
-form {
-    position: relative;
-    border: 1px solid #b7b7b7;
-    padding: 40px;
-    width: 45%;
-    text-align: center;
-    font-family: Arial;
-    margin: auto;
-}
-
 div {
     text-align: center;
     padding: 15px;
     border: 1px solid #b7b7b7;
     font-family: Corbel Light;
-    font-weight: normal;
-    width: 47.55%;
+    width: 50vw;
     font-size: 30px;
     color: #454545;
     margin: auto;
     margin-top: 50px;
     background: #f0f0f0;
-    }
+    margin-left: 25vw;
+}
+
+form {
+    border: 1px solid #b7b7b7;
+    padding: 15px;
+    padding-top: 50px;
+    width: 50vw;
+    font-family: Arial;
+    margin: auto;
+    margin-left: 25vw;
+    text-align: center;
+}
 
 input[type=text], input[type=password] {
     width: 30%;
-    padding: 10px 20px;
-    display: inline-block;
+    padding: 10px;
     border: 1px solid #ccc;
-    box-sizing: border-box;
-    align: center;
     margin: auto;
-    float: center;
-}
-
-input[type=submit] {
-    width: 30%;
-    margin-top: 10px;
-    padding: 5px 10px;
-    high: 25%;
-    background-color: #295dac;
-    border-color: #295dac;
-    color:white;
 }
 
 input[type=checkbox] {
     float: center;
     position: relative;
-    left: -43px;
+    margin-left: -135px;
     cursor: pointer;
+}
+
+input[type=submit] {
+    width: 33%;
+    margin-top: 10px;
+    padding: 10px;
+    background-color: #295dac;
+    border-color: #295dac;
+    color:white;
+    font-size: 15px;
+    cursor:pointer;
 }
