--- a/LAB19/WON5_tema19_1/WON5_tema19_1.css
+++ b/LAB19/WON5_tema19_1/WON5_tema19_1.css
@@ -2,6 +2,11 @@ input[type=text], input[type=password] {
     width: 200px;
 }
 
+input[type=checkbox] {
+    cursor:pointer;
+}
+
 input[type=submit] {
     width: 210px;
+    cursor: pointer;
 }
