--- a/LAB19/WON5_tema19_1/WON5_tema19_1.css
+++ b/LAB19/WON5_tema19_1/WON5_tema19_1.css
@@ -1,5 +1,7 @@
 input[type=text], input[type=password] {
     width: 200px;
+    padding: 0.2em;
+    box-sizing: content-box;
 }
 
 input[type=checkbox] {
@@ -7,6 +9,8 @@ input[type=checkbox] {
 }
 
 input[type=submit] {
-    width: 210px;
+    width: 200px;
     cursor: pointer;
+    padding: 0.2em;
+    box-sizing: content-box;
 }
