--- a/LAB20/WON5_tema20_4/WON5_tema20_4.css
+++ b/LAB20/WON5_tema20_4/WON5_tema20_4.css
@@ -33,7 +33,7 @@ label {
     font-family: Candara;
 }
 
-input[type=button] {
+input[type=submit] {
     width: 300px;
     height: 40px;
     cursor: pointer;
