--- a/LAB21/WON5_tema21_2/templates/portfolio.html
+++ b/LAB21/WON5_tema21_2/templates/portfolio.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='home.css') }}" />
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>Portfolio</title>
 </head>
 <body>
     <table class="base">
