--- a/LAB21/WON5_tema21_3/static/home.css
+++ b/LAB21/WON5_tema21_3/static/home.css
@@ -26,9 +26,19 @@ body {
     margin: auto;
     text-align: left;
     font-family: Candara;
-    font-size: 27px;
+    font-size: 30px;
     padding: 10px;
     padding-top: 50px;
+    color: #000;
+    font-weight: bold;
+}
+
+.title2 {
+    margin: auto;
+    text-align: left;
+    font-family: Candara;
+    font-size: 23px;
+    padding: 20px;
     color: #000;
     font-weight: bold;
 }
@@ -51,9 +61,8 @@ body {
 }
 
 .td_pic {
-    padding-top: 25px;
+    padding: 25px;
     text-align: center;
-    width: 30vw;
 }
 
 .menu {
@@ -62,4 +71,32 @@ body {
 
 .content {
     vertical-align: top;
+}
+
+.title2 {
+    margin: auto;
+    text-align: center;
+    font-family: Candara;
+    font-size: 25px;
+    padding: 20px;
+    color: #000;
+    font-weight: bold;
+}
+
+.under_photo {
+    margin: auto;
+    text-align: left;
+    font-family: Candara;
+    font-size: 17px;
+    padding: 20px;
+    padding-left: 10%;
+    padding-right: 10%;
+    color: #000;
+}
+
+.portfolio {
+    width: 80%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
