--- a/LAB21/WON5_tema21_3/templates/home.html
+++ b/LAB21/WON5_tema21_3/templates/home.html
@@ -27,7 +27,7 @@
                     standardelor de calitate la cel mai inalt nivel.</p>
             </td>
             <td class="td_pic">
-                <img src="{{ url_for('static', filename='iso9001.png') }}" height="600" alt="Under construction">
+                <img src="{{ url_for('static', filename='iso9001.png') }}" height="600" alt="ISO9001">
             </td>
         </tr>
     </table>
