--- a/LAB21/WON5_tema21_4/static/home.css
+++ b/LAB21/WON5_tema21_4/static/home.css
@@ -106,7 +106,7 @@ body {
     margin-right: auto;
     border-style: no;
     width: 30vw;
-    margin-top: 150px;
+    margin-top: 50px;
     background-color: white;
     border-radius: 20px;
     padding: 40px;
@@ -118,7 +118,7 @@ body {
     margin-bottom: 30px;
 }
 
-input[type=text], input[type=password] {
+input[type=text], input[type=email] {
     width: 300px;
     height: 40px;
     padding: 0.2em;
@@ -126,6 +126,17 @@ input[type=text], input[type=password] {
     border-radius: 10px;
     border-color: #FF6347;
     font-size: 15px;
+}
+
+#text {
+    height: 100px;
+    vertical-align: top;
+    width: 300px;
+    padding: 0.2em;
+    box-sizing: content-box;
+    border-radius: 10px;
+    font-size: 15px;
+    border: 2px solid #FF6347;
 }
 
 input[type=checkbox] {
@@ -176,4 +187,12 @@ tr, td {
 
 #answer_check {
     font-family: Candara;
+}
+
+#footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  background-color: #FF6347;
+  height: 150px
 }
