--- a/LAB21/WON5_tema21_4/templates/contact.html
+++ b/LAB21/WON5_tema21_4/templates/contact.html
@@ -18,23 +18,23 @@
         </tr>
         <tr>
             <td>
-               <input type="text" id="name" placeholder="Username" />
+               <input type="text" id="name" placeholder="Nume" />
             </td>
         </tr>
-        <tr><td> <div id="answer_user" class="color-red"> </div></td></tr>
+        <tr><td> <div> </div></td></tr>
         <tr>
             <td>
                <input type="email" id="email" placeholder="E-mail" />
             </td>
         </tr>
-        <tr><td> <div id="answer_email" class="color-red"> </div></td></tr>
+        <tr><td> <div> </div></td></tr>
         <tr>
             <td>
-                <textarea id="text" placeholder="Your message here..." ></textarea>
+                <textarea id="text" placeholder="Mesajul tau aici..." ></textarea>
             </td>
         </tr>
         <tr>
-            <td> <div id="answer_text" class="color-red"> </div></td>
+            <td> <div> </div></td>
         </tr>
         <tr>
             <td>
@@ -42,7 +42,7 @@
             </td>
         </tr>
         <tr>
-            <td> <div id="answer_check"> </div></td>
+            <td> <div> </div></td>
         </tr>
         <tr>
             <td>
