--- a/LAB22/WON5_tema22_1/templates/students.html
+++ b/LAB22/WON5_tema22_1/templates/students.html
@@ -1,13 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <link rel="stylesheet" href="{{ url_for('static', filename='base.css') }}" />
-    <meta charset="UTF-8">
-    <title>Students</title>
-</head>
-<body>
-    <div id="title">Fastr Track IT</div>
-    <hr>
+{% extends "layout.html" %}
+
+{% block title %}
+    Students
+{% endblock %}
+
+{% block content %}
     <div id="subtitle">Lista elevi</div>
     <table>
         <tr>
@@ -22,5 +19,4 @@
     <hr>
     <input type="text" placeholder="Search">
     <input type="submit" name="Submit">
-</body>
-</html>
+{% endblock %}
