--- a/LAB22/WON5_tema22_1/templates/students.html
+++ b/LAB22/WON5_tema22_1/templates/students.html
@@ -12,7 +12,7 @@
         </tr>
         {% for sid in students %}
             <tr>
-                <td><a href="/{{sid}}/">{{students[sid]['lname']}} {{students[sid]['fname']}}</a></td><td>{{students[sid]['class']}}</td>
+                <td><a href="/students/{{sid}}/">{{students[sid]['lname']}} {{students[sid]['fname']}}</a></td><td>{{students[sid]['class']}}</td>
             </tr>
         {% endfor %}
     </table>
