--- a/LAB22/WON5_tema22_1/templates/student.html
+++ b/LAB22/WON5_tema22_1/templates/student.html
@@ -6,21 +6,25 @@
 
 {% block content %}
     <div id="subtitle">Date elevi</div>
-    <table id="stud">
-        {% for k, i in students.items() %}
-            {% if k == (sid | int) %}
-                <tr>
-                    <th>Nume</th><td>{{students[k]['lname']}}</td>
-                </tr>
-                <tr>
-                    <th>Prenume</th><td>{{students[k]['fname']}}</td>
-                </tr>
-                <tr>
-                    <th>Clasa</th><td>{{students[k]['class']}}</td>
-                </tr>
-            {% endif %}
-        {% endfor %}
-    </table>
+        {% if (sid | int) not in students.keys() %}
+                <div id="inex">Elev inexistent</div>
+        {% else %}
+            <table id="stud">
+                {% for k, i in students.items() %}
+                    {% if k == (sid | int) %}
+                        <tr>
+                            <th>Nume</th><td>{{students[k]['lname']}}</td>
+                        </tr>
+                        <tr>
+                            <th>Prenume</th><td>{{students[k]['fname']}}</td>
+                        </tr>
+                        <tr>
+                            <th>Clasa</th><td>{{students[k]['class']}}</td>
+                        </tr>
+                    {% endif %}
+                {% endfor %}
+            </table>
+        {% endif %}
     <hr>
     <a href="/students/">Lista elevi</a>
 {% endblock %}
