--- a/LAB22/WON5_tema22_3/templates/search.html
+++ b/LAB22/WON5_tema22_3/templates/search.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-    <div id="subtitle">Rezultate cautarii</div>
+    <div id="subtitle">Rezultatele cautarii</div>
     {% set counter = [] %}
     {% for k, i in students.items() %}
         {% for j in i %}
