--- a/LAB22/WON5_tema22_5/templates/search.html
+++ b/LAB22/WON5_tema22_5/templates/search.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-    <div id="subtitle">Rezultate cautarii</div>
+    <div id="subtitle">Rezultatele cautarii</div>
     {% set counter = [] %}
     {% for i in students %}
         {% for j in i %}
