--- a/LAB22/WON5_tema22_3/templates/students.html
+++ b/LAB22/WON5_tema22_3/templates/students.html
@@ -6,17 +6,21 @@
 
 {% block content %}
     <div id="subtitle">Lista elevi</div>
-    <table>
-        <tr>
-            <th>Nume</th><th>Clasa</th>
-        </tr>
-        {% for sid in students %}
+    {% if students %}
+        <table>
             <tr>
-                <td><a href="/students/{{sid}}/">{{students[sid]['lname']}} {{students[sid]['fname']}}</a></td>
-                <td><a href="/class/{{students[sid]['class']}}/">{{students[sid]['class']}}</a></td>
+                <th>Nume</th><th>Clasa</th>
             </tr>
-        {% endfor %}
-    </table>
+            {% for sid in students %}
+                <tr>
+                    <td><a href="/student/{{sid}}/">{{students[sid]['lname']}} {{students[sid]['fname']}}</a></td>
+                    <td><a href="/class/{{students[sid]['class']}}/">{{students[sid]['class']}}</a></td>
+                </tr>
+            {% endfor %}
+        </table>
+    {% else %}
+        <div> Nu exista rezultat </div>
+    {% endif %}
     <hr>
     <form action="/search" method="GET">
         <input type="text" name="search" placeholder="Search">
