--- a/Z_PROIECT/templates/home.html
+++ b/Z_PROIECT/templates/home.html
@@ -3,15 +3,9 @@
 {% block title %}KBR Orders{% endblock %}
 
 {% block content %}
-    <nav class="home-nav">
-        <ul class="menu">
-            <li><a href="/home/">Home</a></li>
-            <li><a href="/furnizori/">Furnizori</a></li>
-            <li><a href="/comenzi/">Comenzi</a></li>
-            <li><a href="/comanda_noua/">Comanda nou</a></li>
-            <li><a href="/database/">Database</a></li>
-        </ul>
-    </nav>
+    <div id="h_div">
+        <a id="h_button" href="/comanda_noua/">Creeaza o comanda noua</a>
+    </div>
 {% endblock %}
 
 {% block foter %}
