--- a/Z_PROIECT/templates/database.html
+++ b/Z_PROIECT/templates/database.html
@@ -6,9 +6,9 @@
     <div id="database_div">
         <table id="database_table">
             <tr>
-                <th>Nume furnizor</th><th>Adresa furnizor</th><th>E-mail furnizor</th><th>Telefon firnizor</th>
+                <th>Cod accesoriu</th><th>Descriere</th><th>Nume furnizor</th><th>Cod furnizor</th>
             </tr>
-            {% for i in supplier %}
+            {% for i in accessories %}
                 <tr>
                     <td>{{i[0]}}</td><td>{{i[1]}}</td><td>{{i[2]}}</td><td>{{i[3]}}</td>
                 </tr>
