--- a/Z_PROIECT/templates/comanda_noua.html
+++ b/Z_PROIECT/templates/comanda_noua.html
@@ -79,6 +79,6 @@
 <script type="text/javascript" src="{{ url_for('static', filename='KBR_orders.js') }}"></script>
 {% endblock %}
 
-{% block foter %}
+{% block footer %}
 
 {% endblock %}
