--- a/Z_PROIECT/static/style.css
+++ b/Z_PROIECT/static/style.css
@@ -36,6 +36,8 @@ body > nav{
     padding: 5px;
     min-height: 79vh;
     position: relative;
+    overflow: auto;
+    max-height: 79vh;
 }
 
 #footer{
@@ -176,6 +178,7 @@ body > nav{
     border-radius: 8px;
     font-family: Candara;
     cursor: pointer;
+    margin: 10px;
 }
 
 .foot_but:hover {
@@ -184,4 +187,34 @@ body > nav{
 
 .fo {
     display: inline-block;
+}
+
+.supp_list {
+    margin: 10px;
+    margin-left: 20px;
+    margin-top: 0px;
+    padding: 2px;
+}
+
+.edit {
+    width: 20vw;
+    height: 5vh;
+    margin: 5px;
+    padding:5 px;
+    font-family: Candara;
+    font-size: 15px;
+}
+
+.foot_but2 {
+    width: 10vw;
+    height: 3vh;
+    background-color: #76ECA9;
+    box-shadow: 2px 2px 2px cadetblue;
+    border-radius: 8px;
+    font-family: Candara;
+    cursor: pointer;
+}
+
+.foot_but2:hover {
+    background-color: #ccc;
 }
