--- a/Z_PROIECT/templates/furnizori.html
+++ b/Z_PROIECT/templates/furnizori.html
@@ -20,7 +20,7 @@
 {% endblock %}
 
 {% block footer %}
-<form class="fo" action="/furnizori" method="GET">
+<form class="fo" action="/furnizori/search/" method="POST">
     <input id="sh" type="text" name="search" placeholder="Search">
     <input class="foot_but" type="submit" name="search" value="Cauta">
 </form>
