--- a/Z_PROIECT/templates/furnizori.html
+++ b/Z_PROIECT/templates/furnizori.html
@@ -11,7 +11,7 @@
             {% for i in supplier %}
                     <tr>
                         <td>{{i[0]}}</td><td>{{i[1]}}</td><td>{{i[2]}}</td><td>{{i[3]}}</td>
-                        <td><button class="foot_but" onclick="window.location.href='/furnizori/edit/{{i[4]}}/'">Modifica</button></td>
+                        <td><button class="foot_but3" onclick="window.location.href='/furnizori/edit/{{i[4]}}/'">Modifica</button></td>
                     </tr>
             {% endfor %}
         </table>
