--- a/Z_PROIECT/templates/layout.html
+++ b/Z_PROIECT/templates/layout.html
@@ -25,7 +25,7 @@
             <li><a href="/comanda_noua/">Comanda noua</a></li>
             <li><a href="/furnizori/">Furnizori</a></li>
             <li><a href="/comenzi/">Comenzi</a></li>
-            <li><a href="/database/">Accesorii</a></li>
+            <li><a href="/accessories/">Accesorii</a></li>
         </ul>
     </nav>
     <div id="div">
