--- a/Z_PROIECT/templates/database.html
+++ b/Z_PROIECT/templates/database.html
@@ -11,6 +11,7 @@
             {% for i in accessories %}
                 <tr>
                     <td>{{i[0]}}</td><td>{{i[1]}}</td><td>{{i[2]}}</td><td>{{i[3]}}</td>
+                    <td><button class="foot_but3" onclick="window.location.href='/accessories/edit/{{i[4]}}/'">Modifica</button></td>
                 </tr>
             {% endfor %}
         </table>
@@ -18,14 +19,9 @@
 {% endblock %}
 
 {% block footer %}
-<form class="fo" action="/furnizori" method="GET">
+<form class="fo" action="/accessories/search/" method="POST">
     <input id="sh" type="text" name="search" placeholder="Search">
     <input class="foot_but" type="submit" name="search" value="Cauta">
 </form>
-<form class="fo">
-    <input class="foot_but" type="button" name="search" value="Adauga">
-</form>
-<form class="fo">
-    <input class="foot_but" type="submit" name="search" value="Modifica">
-</form>
+    <button class="foot_but" onclick="window.location.href='/accessories/new/'">Nou</button>
 {% endblock %}
